Upgrade to gradle 8.7 java 17

--- a/build.gradle
+++ b/build.gradle
@@ -66,17 +66,28 @@ jacoco {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        csv.enabled false
+        xml.required.set(true)
+        csv.required.set(false)
     }
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 task copyTestResources(type: Copy) {
     from "${projectDir}/src/test/resources"
     into "${buildDir}/classes/test"
     group = 'verification'
     description = 'To be used in Android Studio, workaround for https://code.google.com/p/android/issues/detail?id=64887'
+}
+
+wrapper {
+    gradleVersion = '8.7'
+    distributionType = Wrapper.DistributionType.BIN
 }
