--- a/mvn-push.gradle
+++ b/mvn-push.gradle
@@ -2,12 +2,12 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 task javadocsJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier.set('sources')
     from sourceSets.main.allSource
 }
 
